--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>AQI Prediction System</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: linear-gradient(to right, #1e3c72, #2a5298);
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      margin-top: 40px;
+    }
+
+    .card {
+      background: white;
+      color: black;
+      width: 350px;
+      margin: 40px auto;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    select, button {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      background: #1e3c72;
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
+
+    button:hover {
+      background: #163060;
+    }
+
+    #output {
+      margin-top: 15px;
+      padding: 15px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>🌍 AQI Prediction</h1>
+
+  <div class="card">
+    <select id="city"></select>
+    <button id="btn">Check AQI</button>
+    <div id="output"></div>
+  </div>
+
 <script>
 fetch('data.json')
   .then(response => response.json())
@@ -7,28 +75,51 @@ fetch('data.json')
     const resultBox = document.getElementById("output");
     const button = document.getElementById("btn");
 
-    // Fill dropdown
+    // Populate dropdown
     Object.keys(data).forEach(city => {
-      let option = document.createElement("option");
+      const option = document.createElement("option");
       option.value = city;
       option.textContent = city;
       citySelect.appendChild(option);
     });
 
-    // Button click
+    // Button click event
     button.addEventListener("click", function() {
+
       const selectedCity = citySelect.value;
 
       if(data[selectedCity]) {
+
+        const aqi = data[selectedCity].aqi;
+        const category = data[selectedCity].category;
+        const date = data[selectedCity].date;
+
+        // Color based on AQI
+        let color;
+
+        if(aqi <= 50) color = "#4CAF50";
+        else if(aqi <= 100) color = "#8BC34A";
+        else if(aqi <= 200) color = "#FFC107";
+        else if(aqi <= 300) color = "#FF5722";
+        else color = "#D32F2F";
+
+        resultBox.style.background = color;
+        resultBox.style.color = "white";
+
         resultBox.innerHTML = `
-          <h3>AQI: ${data[selectedCity].aqi}</h3>
-          <h4>Category: ${data[selectedCity].category}</h4>
-          <p>Date: ${data[selectedCity].date}</p>
+          AQI: ${aqi} <br>
+          Category: ${category} <br>
+          Date: ${date}
         `;
+
       } else {
         resultBox.innerHTML = "No data available";
       }
+
     });
 
   });
 </script>
+
+</body>
+</html>
